--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         stage('Complete') {
             steps {
-                echo "job complete i hope"
+                echo "testing the new pipeline."
             }
         }
     }
